Add actor support

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,8 +1,28 @@
 version = 3.3.1
-runner.dialect = scala213
-assumeStandardLibraryStripMargin = true
-align.openParenCallSite = false
-align.openParenDefnSite = false
-docstrings.style = keep
-maxColumn = 100
-rewrite.rules = [AvoidInfix, PreferCurlyFors, RedundantBraces, SortImports, SortModifiers]
+version = 2.6.3
+
+style = defaultWithAlign
+maxColumn = 120
+
+continuationIndent.callSite = 2
+
+newlines {
+  source=keep
+  sometimesBeforeColonInMethodReturnType = false
+  topLevelStatements = [before,after]
+}
+
+align {
+  preset = most
+  arrowEnumeratorGenerator = true
+  ifWhileOpenParen = false
+  openParenCallSite = false
+  openParenDefnSite = false
+}
+
+docstrings = JavaDoc
+
+rewrite {
+  rules = [SortImports, RedundantBraces]
+  redundantBraces.maxLines = 1
+}
