--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,13 @@
-# Absolute path to the default journal plugin configuration entry.
-akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
 
-# Absolute path to the default snapshot store plugin configuration entry.
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+slick-postgres {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    dataSourceClass = "slick.jdbc.DriverDataSource"
+    properties = {
+      driver = "org.postgresql.Driver"
+      url = "jdbc:postgresql://localhost/postgres"
+      user = postgres
+      password = ""
+    }
+  }
+}
