Add docker support

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,8 +5,8 @@ slick-postgres {
     dataSourceClass = "slick.jdbc.DriverDataSource"
     properties = {
       driver = "org.postgresql.Driver"
-      url = "jdbc:postgresql://localhost/postgres"
-      user = postgres
+      url = "jdbc:postgresql://postgres/counter"
+      user = dbadmin
       password = ""
     }
   }
